<resources>
    <string name="app_name">Welaaa</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Muso</string>
    <string name="nav_header_subtitle">musooff@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home">홈</string>
    <string name="nav_class">클래스 전체목록</string>
    <string name="nav_audiobook">오디오북 전체목록</string>
    <string name="nav_my">마이윌라</string>
    <string name="nav_inquiries">1:1 문의</string>
    <string name="share">공유하기</string>
    <string name="action_search">Search</string>
    <string name="action_shop">Shop</string>
    <string name="welaaa_series">윌라 추천 시리즈</string>
    <string name="welaaa_series_sub_text">당신이 배우고 싶은 모든 것</string>
    <string name="welaaa_series_button">전체보기</string>
</resources>