<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="150dp">
                <androidx.viewpager.widget.ViewPager
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/class_first_vp">
                </androidx.viewpager.widget.ViewPager>
                <com.google.android.material.tabs.TabLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:id="@+id/class_first_tl"
                    app:tabGravity="center"
                    app:tabIndicatorHeight="0dp"
                    app:tabBackground="@drawable/tab_selector">
                </com.google.android.material.tabs.TabLayout>
            </RelativeLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/src_images_main_wide_banner"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:text="@string/welaaa_series"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginTop="5dp"
                android:textColor="@color/colorWhiteDark"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:text="@string/welaaa_series_sub_text"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:textSize="12sp"
                android:visibility="gone"
                android:text="@string/welaaa_series_button"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>